--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/larry-deguzman/Slack-Meet-Message/issues"
   },
-  "homepage": "https://github.com/larry-deguzman/Slack-Meet-Message#readme"
+  "homepage": "https://github.com/larry-deguzman/Slack-Meet-Message#readme",
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
+  }
 }
